사원 상세보기 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,9 @@ mybatis.type-aliases-package=com.my.cab.dto
 #logging-level
 # logger-default:info
 logging.level.root=info
+
+
+#error
+server.error.whitelabel.enabled=false
+server.error.path=/error
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
