채팅 전송 완료

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,34 @@ build/
 ### VS Code ###
 .vscode/
 .mvn/wrapper/maven-wrapper.properties
+src/main/resources/static/upload/driver_photo_file_1.gif
+src/main/resources/static/upload/driver_photo_file_1.png
+src/main/resources/static/upload/driver_photo_file_10.gif
+src/main/resources/static/upload/driver_photo_file_11.gif
+src/main/resources/static/upload/driver_photo_file_13.gif
+src/main/resources/static/upload/driver_photo_file_14.gif
+src/main/resources/static/upload/driver_photo_file_15.gif
+src/main/resources/static/upload/driver_photo_file_16.png
+src/main/resources/static/upload/driver_photo_file_4.png
+src/main/resources/static/upload/driver_photo_file_5.png
+src/main/resources/static/upload/driver_photo_file_6.png
+src/main/resources/static/upload/driver_photo_file_7.png
+src/main/resources/static/upload/driver_photo_file_8.png
+src/main/resources/static/upload/driver_photo_name_12.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_1.gif
+src/main/resources/static/upload/driver_taxi_license_photo_file_1.pdf
+src/main/resources/static/upload/driver_taxi_license_photo_file_1.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_10.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_11.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_12.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_13.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_14.gif
+src/main/resources/static/upload/driver_taxi_license_photo_file_15.gif
+src/main/resources/static/upload/driver_taxi_license_photo_file_16.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_4.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_5.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_6.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_7.png
+src/main/resources/static/upload/driver_taxi_license_photo_file_8.png
+src/main/resources/static/upload/driver_taxi_license_photo_name_1.png
+src/main/resources/static/upload/driver_taxi_license_photo_name_12.png
