--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.servlet.multipart.max-file-size=10MB
 # total file size
 spring.servlet.multipart.max-request-size = 100MB
 
+server.tomcat.max-http-form-post-size=20MB
+
+
+
 # file save location
 spring.servlet.multipart.location=C:/upload
 
@@ -40,6 +44,8 @@ mybatis.type-aliases-package=com.my.cab.dto
 #logging-level
 # logger-default:info
 logging.level.root=info
+
+
 
 
 #error
