--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,17 @@ mybatis.type-aliases-package=com.my.cab.dto
 logging.level.root=info
 
 
+#mailService
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= mycab78gdj@gmail.com
+spring.mail.password= jvix muym jdpy zgrd
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.transport.protocol=smtp
+spring.mail.debug=true
+spring.mail.default.encoding=UTF-8
 
 
 #error
