--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.tomcat.max-http-form-post-size=20MB
 
 
 # file save location
-spring.servlet.multipart.location=/Users/chaehyeonpark/Documents/upload
+spring.servlet.multipart.location=C:/upload
 
 
 # encoding
@@ -63,16 +63,3 @@ spring.mail.default.encoding=UTF-8
 server.error.whitelabel.enabled=false
 server.error.path=/error
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
-
-#mail
-spring.mail.host=smtp.naver.com
-spring.mail.port=465
-spring.mail.username=kikoki0210@naver.com
-spring.mail.password=password
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=3000
-spring.mail.properties.mail.smtp.writetimeout=5000
