--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.tomcat.max-http-form-post-size=20MB
 
 
 # file save location
-spring.servlet.multipart.location=C:/upload
+spring.servlet.multipart.location=/usr/local/tomcat/webapps/upload
 
 
 # encoding
