--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,6 +57,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.transport.protocol=smtp
 spring.mail.debug=true
 spring.mail.default.encoding=UTF-8
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 
 
 #error
